Update logo styling and add Code of Conduct document

--- a/static/index.html
+++ b/static/index.html
@@ -21,7 +21,7 @@
         <![endif]-->
 
         <div class="header">
-            <a href="" class="logo">SuperNova <span style="color: #a42323;">Lite</span></a>
+            <a href="" class="logo">SUPERNOVA <span style="color: #F0331D;">lite</span></a>
             <div id="dateTime" class="date-time"></div> <!-- New div for day and time -->
         </div>
 
